tests/reference/asr-external2-72b4b0a.stderr
semantic error: Argument number mismatch.
 --> tests/errors/external2.f90:4:3
  |
4 |   call f(a, b, c)
  |   ^^^^^^^^^^^^^^^ 
